# beamcode

./: Cargo.toml  README.md
.github/workflows/: ci.yml
beamcode_derive/: Cargo.toml  README.md
beamcode_derive/src/: lib.rs
beamop_derive/: Cargo.toml
beamop_derive/src/: lib.rs
examples/: decode-encode-check.rs  parse-beam.rs
src/: instruction.rs  lib.rs  op.rs  term.rs  terms.rs
