[package]
name = "beamop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beamop_derive = { path = "beamop_derive", version = "0.1.0" }
byteorder = "1"
num = "0.4"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
beam_file = "0.3"
clap = { version = "3", features = ["derive"] }

[workspace]
members = ["beamop_derive"]
