[package]
name = "beamcode"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Erlang BEAM instructions encoding / decoding library"
homepage = "https://github.com/sile/beamcode"
repository = "https://github.com/sile/beamcode"
readme = "README.md"

[dependencies]
beamcode_derive = { path = "beamcode_derive", version = "0.1.0" }
byteorder = "1"
num = "0.4"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
beam_file = "0.3"
clap = { version = "3", features = ["derive"] }

[workspace]
members = ["beamcode_derive"]
